Fix tests to avoid delet main DB
